--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <br>
 <table cellspacing="21">
     <tr>
-        <td><img src ="piy.jpg" height="33" width="27" alt="PIYUSH POKHRIYAL PIC"><br></td>
+        <td><img src ="https://github.com/Piyush646/CV/blob/master/piy.JPG" height="33" width="27" alt="PIYUSH POKHRIYAL PIC"><br></td>
         <td><h1>Piyush Pokhriyal</h1>
             <p><strong><a href="https://www.gehu.ac.in/" >At graphic era</a></strong>
                 <br>
